# AutoML

./: .env.dev  .gitignore  README.md  docker-compose.yml
model_manager/: .bumpversion.cfg  .env  CHANGELOG.md  Dockerfile  pyproject.toml
model_manager/alembic/: env.py
model_manager/alembic/versions/: 3698a0213862_add_new_models_and_update_old.py  8700a6b89605_initial_migration.py  b1f58fc2e1d5_initial_migration.py
model_manager/src/: __main__.py
model_manager/src/model_manager/: create_app.py  settings.py
model_manager/src/model_manager/api/v1/base/: utils.py
model_manager/src/model_manager/api/v1/model_versions/: core.py  models.py  views.py
model_manager/src/model_manager/api/v1/models/: core.py  models.py  views.py
model_manager/src/model_manager/api/v1/modules/: models.py
model_manager/src/model_manager/api/v1/projects/: core.py  models.py  views.py
model_manager/src/model_manager/api/v1/runner/: core.py  models.py  view.py
model_manager/src/model_manager/api/v1/users/: authentication.py  core.py  models.py  token.py  views.py
model_manager/tests/: conftest.py
model_runner/: .env  Dockerfile  pyproject.toml
model_runner/src/: __main__.py
model_runner/src/model_runner/: create_app.py  settings.py
model_runner/src/model_runner/api/v1/runner/: core.py  models.py  view.py
model_runner/src/model_runner/runner/: timeflops.py
model_runner/src/model_runner/runner/api/loaders/: dynamic_loader.py
model_runner/src/model_runner/runner/api/metrics/: metric.py  metrics_api.py
model_runner/src/model_runner/runner/api/models/: dynamic_loader.py
model_runner/src/model_runner/runner/models/: __init__.py  ardl_statsmodels.py  arima_statsmodels.py
scripts/: raw_model.json
services/frontend/: package-lock.json
services/frontend/src/: App.vue  main.js
services/frontend/src/components/: LockIcon.vue  NavBar.vue  UserIcon.vue
services/frontend/src/components/icons/: EmptyUserPhotoIcon.vue  LetterIcon.vue
services/frontend/src/router/: index.js
services/frontend/src/store/: index.js
services/frontend/src/store/modules/: users.js
services/frontend/src/views/: Dashboard.vue  Home.vue  Login.vue  Register.vue
