[tool.poetry]
name = "model_manager"
version = "0.0.1"
description = "AutoML Model Manager microservice component for manipulate data and ML&AI models"
authors = ["Nikita Lupenko <nicklupman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.71.0"
uvicorn = "^0.16.0"
httpx = "^0.21.3"
python-multipart = "^0.0.5"
loguru = "^0.5.3"
alembic = "^1.7.7"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.32"
FastAPI-SQLAlchemy = "^0.2.1"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
minio = "^7.1.5"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
bumpversion = "^0.6.0"
flake8 = "^4.0.1"
mypy = "^0.931"
rope = "^0.22.0"
bandit = "^1.7.1"
pytest = "^6.2.5"
python-dateutil = "^2.8.2"
pytest-cov = "^3.0.0"
flake8-eradicate = "^1.2.0"
flake8-print = "^4.0.0"
flake8-use-fstring = "^1.3"
isort = "^5.10.1"


[tool.pylint]
extension-pkg-whitelist = ["orjson"]

[tool.pylint.messages_control]
disable = [
    "relative-beyond-top-level",
    "format", # handled by black
    "invalid-name",
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.vscode
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
