[tool.poetry]
name = "model_runner"
version = "0.0.1"
description = ""
authors = ["Nikita Lupenko <nicklupman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
httpx = "^0.22.0"
python-multipart = "^0.0.5"
loguru = "^0.6.0"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
scikit-learn = "^1.0.2"
pandas = "^1.4.1"
statsmodels = "^0.13.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
bumpversion = "^0.6.0"
flake8 = "^4.0.1"
mypy = "^0.942"
rope = "^0.23.0"
bandit = "^1.7.4"
pytest = "^7.1.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
